@@ -37,6 +37,7 @@ Other new features:
   o Command line support for multiple file comments.  (robs)
   o Added soxi utility to extract/display file header fields.  (robs)
   o Added pkg-config support. (Pascal Giard)
+  o Added simple V.U. meter.  (robs)
 
 Bug fixes:
 
